--- a/helm/k8s-pub-auth-varnish/app-configs/k8s-pub-auth-varnish_eks_publish_dev.yaml
+++ b/helm/k8s-pub-auth-varnish/app-configs/k8s-pub-auth-varnish_eks_publish_dev.yaml
@@ -2,6 +2,7 @@
 service:
   name: auth-varnish
   certificateAwsArn: "arn:aws:acm:eu-west-1:070529446553:certificate/a6ab3d87-cdae-4db4-838f-3dbce570ad47"
+  external_dns_hostname: "upp-k8s-dev-publish-eu.upp.ft.com"
 
 elb:
   tags: "systemCode=upp,teamDL=universal.publishing.platform@ft.com,environment=d"
