Changed volume path

--- a/helm/k8s-pub-auth-varnish/templates/deployment.yaml
+++ b/helm/k8s-pub-auth-varnish/templates/deployment.yaml
@@ -53,4 +53,4 @@ spec:
           secretName: doppler-global-secrets
           items:
             - key: VARNISH_HTPASSWD
-              path: VARNISH_HTPASSWD
+              path: .htpasswd
